@@ -14,9 +14,9 @@ class DRbService
   @@manager = DRb::ExtServManager.new
   @@ruby = EnvUtil.rubybin
   @@ruby += " -d" if $DEBUG
-  @@dir = File.dirname(File.expand_path(__FILE__))
   def self.add_service_command(nm)
-    DRb::ExtServManager.command[nm] = "#{@@ruby} #{@@dir}/#{nm}"
+    dir = File.dirname(File.expand_path(__FILE__))
+    DRb::ExtServManager.command[nm] = "#{@@ruby} #{dir}/#{nm}"
   end
 
   %w(ut_drb.rb ut_array.rb ut_port.rb ut_large.rb ut_safe1.rb ut_eval.rb).each do |nm|
